# gserver-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  run_server.sh
crates/accounts/: Cargo.toml
crates/accounts/src/: account.rs  error.rs  lib.rs  loader.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  idgen.rs  lib.rs  positions.rs  types.rs
crates/game/: Cargo.toml
crates/game/src/: account.rs  handlers.rs  lib.rs  manager.rs  player.rs  properties.rs
crates/levels/: Cargo.toml
crates/levels/src/: cache.rs  error.rs  level.rs  lib.rs  manager.rs  map.rs  parser.rs  tiles.rs
crates/network/: Cargo.toml
crates/network/src/: config.rs  connection.rs  handlers.rs  lib.rs  listserver.rs  server.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: codecs.rs  compression.rs  gs1.rs  level.rs  lib.rs  map.rs  nc.rs  packet_builder.rs  packet_structures.rs  packet_types.rs  packets.rs  rc.rs  showimg.rs
crates/resources/: Cargo.toml
crates/scripting/: Cargo.toml
crates/scripting/src/: builtins.rs  context.rs  error.rs  gs1.rs  lib.rs
crates/scripting/src/gs2/: ast.rs  bytecode.rs  compiler.rs  lexer.rs  mod.rs  parser.rs  vm.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/storage/: Cargo.toml
servers/default/accounts/: (npcserver).txt  defaultaccount.txt
servers/default/config/: adminconfig.txt  allowedversions.txt  rchelp.txt  serveroptions.txt
servers/default/npcs/: npcControl-NPC.txt
servers/default/world/: onlinestartlocal.nw
