[package]
name = "gserver-game"
version.workspace = true
edition.workspace = true

[dependencies]
gserver-core.workspace = true
gserver-protocol.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
