[package]
name = "gserver-levels"
version.workspace = true
edition.workspace = true

[dependencies]
gserver-core.workspace = true
gserver-protocol.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
nom = { workspace = true }
flate2 = { workspace = true }
bzip2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
